<?xml version="1.0" encoding="utf-8"?>
 

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:padding="16dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
         >


    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/TableRow41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView81"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workNo"
                android:textSize="18dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FEFORMNO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="18dip" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView79"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FEFORMNAME"
                android:textSize="18dip" />

            <TextView
                android:id="@+id/FEFORMNAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="18dip" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView77"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FEMNAME"
                android:textSize="18dip" />

            <TextView
                android:id="@+id/FEMNAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="18dip" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView75"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FSTARTDATE"
                android:textSize="18dip" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >



                <TextView
                    android:id="@+id/FSTARTDATE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="18dip" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/TableRow37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView73"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CANUSE"
                android:textSize="18dip" />

            <TextView
                android:id="@+id/CANUSE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="18dip" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView71"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PDFURL"
                android:textSize="18dip" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >




                <Button
                    android:id="@+id/btnPDF"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Open PDF" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/TableRow35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >






            <TextView
                android:id="@+id/TextView69"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                        " />

            <TextView
                android:id="@+id/TextView70"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="            " />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill" >

            <TextView
                android:id="@+id/TextView67"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comment" />
        </TableRow>
    </TableLayout>



    <EditText
        android:id="@+id/edtComment"
        android:layout_width="fill_parent"
        android:layout_height="116dp"
        android:ems="10"
        android:inputType="textMultiLine" >

    </EditText>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:padding="10px"> 

     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         以便进行水平居中处理=""
         在edittext下面=""
         必须为wrap_content=""
         表示两个button作为一个整体=""
         这样才能表示宽度只包含两个button="" >

     <Button
         android:id="@+id/btnApprove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="50px"
         android:text="Approve" />



    <Button
        android:id="@+id/btnReject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnApprove"
        android:layout_toRightOf="@+id/btnApprove"
        android:text="Reject " />
 
  </RelativeLayout> 
</RelativeLayout>
    
</LinearLayout>
</ScrollView>
